Add @hckrs/middleware package

--- a/turbo.json
+++ b/turbo.json
@@ -19,7 +19,8 @@
       "dependsOn": []
     },
     "typecheck": {
-      "outputs": []
+      "outputs": [],
+      "dependsOn": ["^build"]
     }
   }
 }
