Build the packages before publishing to NPM
It was publishing empty packages because the TS files weren't being
built and aren't checked in.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,12 @@ jobs:
       - name: Install Dependencies
         run: yarn --frozen-lockfile
 
+      - name: Check Types
+        run: yarn typecheck
+
+      - name: Build Packages
+        run: yarn build
+
       - name: Create Release Pull Request or Publish to npm
         id: changesets
         uses: changesets/action@v1
