--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -4,10 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@remix-run/eslint-config": "1.7.0",
-    "eslint": "^8.23.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "@remix-run/eslint-config": "1.7.2"
+  },
+  "peerDependencies": {
+    "eslint": "^8.0.0",
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0",
+    "typescript": "^4.0.0"
   },
   "publishConfig": {
     "access": "public"
